# SRAL

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  developer_input.ini  emscripten_cross.txt  meson.build  meson.options  meson_options  meson_options.txt  rennovate.json  sral_config.ini  windows-mingw-cross.txt
.github/workflows/: build.yml  cmake-build.yml  release.yml
Bindings/.Net/: Program.cs  sral.cs
Bindings/C#/: Directory.Build.props  Example.cs  SRAL.csproj  Sral.cs
Bindings/Dart/: example.dart  sral.dart  sral_types.dart
Bindings/Go/SRAL/: go.mod
Bindings/Lua/: example.lua  main.lua  sral.lua
Bindings/Node.Js/: CMakeLists.txt  Example.js  binding.gyp  package.json
Bindings/Node.Js/lib/: SRAL.js
Bindings/Node.Js/src/: SRAL_bridge.cpp
Bindings/Python/: MANIFEST.in  pyproject.toml  sral.py
Bindings/Rust/: Cargo.toml
Bindings/Rust/src/: lib.rs  main.rs
Bindings/WebAssembly/: example.js  sral_wasm.cpp  sral_wasm.js
Bindings/go/SRAL/: sral.go  types.go
Dep/: AndroidAccessibilityManagerHelper.java  AndroidContext.cpp  AndroidContext.h  AndroidTTSHelper.java  UIAProvider.cpp  UIAProvider.h  accesskit.h  blastspeak.c  blastspeak.h  fsapi.c  fsapi.h  nvda_control.c  nvda_control.h  proguard-rules.pro  utf-8.c  utf-8.h  wasapi.cpp  wasapi.h
Examples/C/: NVDAControlExConsole.c  SRALExample.c
Examples/ObjC/: SRALCocoaExample.m
Include/: SRAL.h  Sral.hpp
SRC/: ACAnnouncer.cpp  ACAnnouncer.h  AVSpeech.h  AVSpeech.mm  AndroidAccessibilityManager.cpp  AndroidAccessibilityManager.h  AndroidTextToSpeech.cpp  AndroidTextToSpeech.h  CMakeLists.txt  ChromeVox.cpp  ChromeVox.h  Encoding.cpp  Encoding.h  Engine.cpp  Engine.h  Jaws.cpp  Jaws.h  NSSpeech.h  NSSpeech.mm  NVDA.cpp  NVDA.h  Orca.cpp  Orca.h  SAPI.cpp  SAPI.h  SRAL.cpp  SpeechDispatcher.cpp  SpeechDispatcher.h  UIA.cpp  UIA.h  VoiceOver.h  VoiceOver.mm  ZDSR.cpp  ZDSR.h  meson.build
